--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,7 +40,7 @@ jobs:
           context: .
           platforms: linux/amd64, linux/arm64
           push: true
-          tags: latest
+          tags: sheu/python-helloworld:latest
       -
         name: Image Digest
         run: echo ${{ steps.docker_build.outputs.digest }}
